# dusch-maya-s2s

./: .env.example  .gitignore  Dockerfile  README.md  main.kcl  project.toml  pyproject.toml
.lightning_studio/: on_start.sh
scripts/: run_lightning_server.sh
src/maya_s2s/: cli.py  config.py  conversation.py  llm.py  models.py  pipeline.py  server.py  streaming.py
src/maya_s2s/static/: app.js  index.html  styles.css
src/maya_s2s_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
